# ADT

./: README  balance_brackets.c  bt.c  dll  dll.c  dll.h  ds.c  ds.h  ll.c  ll_randomPT.c  revll.c  stack  stack.c  stack.h  str.c  t1  test.c  tree2dll.c
Algo/: merge  merge.c
HashTable/: CMakeLists.txt  mkfl
HashTable/include/: lru_table.h
HashTable/src/: CMakeLists.txt  cq  lru_table.c  q.c  test  test.c
HashTable/tests/: CMakeLists.txt  RunAllTests.cpp  testHT.cpp
heap/: heap.c  my_heap.c  my_heap.h  test
trees/: gtr.c  t1  t2l.c  t2l.h  test.c  tl  tree.c  tree.h  tree2list
trees/trie/: trie  trie.c  trie.h
